<resources>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
  <string name="prompt_email_tel">Email ou Téléphone </string>
    <string name="prompt_tel">Téléphone</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_on">Inscription</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
  </string>
    <string name="item_title_radiobutton_homme">Homme</string>
    <string name="item_title_radiobutton_femme">Femme</string>
    <string name="prompt_firstanme">Nom</string>
    <string name="prompt_username">Nom utilisateur</string>
    <string name="prompt_lastname">Prénom</string>
    <string name="prompt_paroisse">Paroisse</string>
    <string name="prompt_origine">Origine éthnique</string>
    <string name="prompt_datenais">Date de naissance</string>
    <string name="prompt_cgu">CGU</string>
    <string name="prompt_confirm_password">Confimer mot de passe</string>
    <string name="prompt_taille">Taille</string>
    <string name="prompt_pays">Pays</string>
    <string name="prompt_date_naissance">Date de naissance</string>
    <string name="country_prompt">Choisissez un pays</string>
    <string name="hint_country">Choisissez un pays</string>
  <string name="prompt_verset">Verset Biblique</string>

    <string name="error_no_connection">Aucune connexion internet</string>
    <string name="error_service">Erreur de service. Veuillez contacter le service de support</string>
    <string name="error_api">Cette operation ne peut pas etre completer. Réssayer une autre fois ou contactez le service de support</string>
    <string name="error_invalid_username_or_password">Email ou Mot de passe incorrect</string>
    <string name="error_forbidden_account">Votre compte est bloqué</string>
    <string name="error_forbidden_attente">Votre compte est en attente de validation</string>
    <string name="field_error_empty_value_email">L\'email est nécessaire</string>
  <string name="field_error_empty_value_email_tel">L\'email ou téléphone  est nécessaire</string>
    <string name="field_error_empty_value_username">Le Pséudo est nécessaire</string>
    <string name="field_error_empty_value_password">Le mot de passe est nécessaire</string>
    <string name="field_error_empty_value_confirm_password">Les mots de passe ne correspondent pas</string>
    <string name="field_error_not_unique_email">Un compte avec cet email existe déjà</string>
    <string name="field_error_not_unique_tel">Un compte avec ce numero du téléphone existe déjà</string>
    <string name="field_error_not_unique_username">Un compte avec ce pseudo existe déjà</string>
    <string name="field_error_invalid_email_format">L\'email est invalide</string>
    <string name="field_error_invalid_age">Vous devez être majeur pour accéder au site.</string>
    <string name="field_error_invalid_age_old">"Etes-vous sûr d'avoir plus de 100 ans ?"</string>
    <string name="field_error_empty_value_annonce">"Veuillez renseigner votre annonce."</string>
    <string name="field_error_invalid_confirm_password">Les mots de passe ne correspondent pas.</string>
    <string name="field_error_invalid_cgu">Veuillez accepter les CGU.</string>
    <string name="field_error_empty_value_pays">Veuillez choisir un pays</string>
    <string name="field_error_empty_value_name">Le nom est nécessaire</string>
    <string name="field_error_empty_value_surname">Le prénom est nécessaire</string>
    <string name="field_error_empty_value_tel">Le numero du téléphone est nécessaire</string>
    <string name="field_error_empty_value_paroisse">La paroisse est nécessaire</string>
    <string name="field_error_empty_value_origine">L\'origine éthnique est nécessaire</string>
    <string name="prompt_categ_label">Choisissez du contenu pour commencer</string>
    <string name="error_nothing_found">Aucun résultat trouvé</string>

    <string name="dialog_signing_in">Connexion en cours…</string>
    <string name="dialog_registering">Enregistrement en cours…</string>

  <string name="success_save_request">Votre demande est envoyée avec succès</string>
  <string name="success_save_fav">Ce membre est ajouté aux Favoris</string>
  <string name="success_save_Favoris">Membre est ajouté aux favoris avec succès</string>
  <string name="success_delete_Favoris">Ce membre  est retiré de vos favoris </string>
  <string name="dialog_loading_more_messages">Chargement de messages…</string>
  <string name="search_results_visit_found">messages trouvée</string>
  <string name="search_results_visits_found">visites trouvées</string>
  <string name="success_delete_message">Discussion supprimée avec succées</string>
    <string name="dialog_picture">Chargement de l\'image en cours…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="update_profil_succes">Votre profil est mis à jour avec succès</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Mon compte</string>
    <string name="nav_profil">Mon profil</string>
  <string name="nav_serach">Trouvez des amis</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Déconnexion</string>
  <string name="action_settings">Paramètres</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
  <string name="prompt_profession">Profession</string>
  <string name="invitation_request_succes">Votre Invitation est envoyé avec succès</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Quitter</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="dialog_searching_jobs">Recherche membres…</string>
  <string name="dialog_loading_contacts">Chargement contacts…</string>
    <string name="search_results_job_found">membre trouvé</string>
    <string name="search_results_jobs_found">membres trouvés</string>
    <string name="dialog_loading_more_jobs">Chargement de membres…</string>
    <string name="error_could_not_get_current_location">Error…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contacts">ContactsActivity</string>
  <string name="btnTakePicture">Capture Image</string>
  <string name="btnRecordVideo">Record Video</string>
  <string name="or">(or)</string>
  <string name="btnUploadToServer">Upload to Server</string>
  <string name="seekBarHomme">Homme</string>
  <string name="seekBarFemme">Femme</string>
</resources>
