<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    style="@style/SJB_CustomLayout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

         <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/logo"
                 android:layout_gravity="center"
                 android:id="@+id/imageView"
                     android:layout_marginTop="30dp"
                 android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="false"
        android:fillViewport="false">


        <LinearLayout

            android:layout_below="@id/div1"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:id="@+id/email_login_form"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#319b87"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/username"
                    android:foregroundTint="#ffffff"
                    android:textColorHighlight="#ffffff"
                    style="@style/SJB_EditText"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="#ffffff" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/firstname"
                    style="@style/SJB_EditText"
                    android:hint="@string/prompt_firstanme"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="#ffffff" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/lastname"
                    style="@style/SJB_EditText"
                    android:hint="@string/prompt_lastname"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="#ffffff" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email"
                    android:drawableLeft="@drawable/message_icon"
                    style="@style/SJB_EditText"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="#ffffff" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/tel"
                    style="@style/SJB_EditText"
                    android:hint="@string/prompt_tel"
                    android:drawableLeft="@drawable/icon_phone"
                    android:inputType="phone"
                    android:digits="0123456789+"
                    android:backgroundTint="#ffffff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    style="@style/SJB_EditText"
                    android:drawableLeft="@drawable/pwd_icon"
                    android:backgroundTint="#ffffff"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/confirm_password"
                    style="@style/SJB_EditText"
                    android:drawableLeft="@drawable/pwd_icon"
                    android:backgroundTint="#ffffff"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <RadioButton
                    style="@style/SJB_RadioButton"
                    android:button="@drawable/rbtn_selector"
                    android:background="@android:color/transparent"
                    android:text="@string/item_title_radiobutton_homme"
                    android:id="@+id/radioButton" />

                <RadioButton
                    style="@style/SJB_RadioButton"
                    android:background="@android:color/transparent"
                    android:button="@drawable/rbtn_selector"
                    android:text="@string/item_title_radiobutton_femme"
                    android:checked="true"
                    android:id="@+id/radioButton2" />
            </RadioGroup>

            <TextView
                style="@style/SJB_Title_Item_1"
                android:text="@string/prompt_pays"
                android:padding="3dip"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        <android.support.v7.widget.AppCompatSpinner
            style="@style/SJB_Spinner"
            android:id="@+id/pays"
            android:prompt="@string/country_prompt"
            android:popupBackground="#319b87"
            android:spinnerMode="dialog">

        </android.support.v7.widget.AppCompatSpinner>
            <TextView
                style="@style/SJB_Title_Item_1"
                android:text="@string/prompt_date_naissance"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:paddingLeft="3dip"
                android:paddingRight="3dip"
                android:paddingTop="3dip"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
            <EditText
                style="@style/SJB_EditText"
                android:inputType="date"
                android:ems="10"
                android:focusable="false"
                android:onClick="setDate"
                android:clickable="true"
                android:id="@+id/date"
                android:drawableLeft="@drawable/icon_agenda"
                android:backgroundTint="#ffffff"
                android:layout_gravity="bottom"
                />
        </android.support.design.widget.TextInputLayout>

           <!-- <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/taille"
                    style="@style/SJB_EditText"
                    android:backgroundTint="#ffffff"
                    android:hint="@string/prompt_taille"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>-->
            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/paroisse"
                    style="@style/SJB_EditText"
                    android:hint="@string/prompt_profession"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="#ffffff" />
            </android.support.design.widget.TextInputLayout>
          <android.support.design.widget.TextInputLayout
              android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:textColorHint="#ffffff"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/verset"
                    style="@style/SJB_EditText"
                    android:hint="@string/prompt_verset"
                    android:inputType="text"
                    android:backgroundTint="#ffffff" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/email_sign_in_button"
                android:textAllCaps="false"
                style="@style/SJB_SubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_on"
                android:onClick="register"
                android:layout_marginBottom="15dp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>
    </LinearLayout>
